lcm_logger_exe = executable('lcm-logger', ['lcm_logger.c', 'glib_util.c'],
  dependencies : [glib_dep, lcm_lib_dep],
  install : true,
  install_dir: 'bin')

lcm_logplayer_exe = executable('lcm-logplayer', 'lcm_logplayer.c',
  dependencies : [glib_dep, lcm_lib_dep],
  install : true,
  install_dir: 'bin')
