pkg = import('pkgconfig')
pkg.generate(lcm_lib)

# Placeholder code for when Java support is complete in Meson build.
# TODO Complete meson.build file in lcm-java and decide if jchart2d should be
# compiled as a subproject.
# if get_option('lcm_enable_java').enabled()
#   pkg.generate(lcm_java_lib)
# endif
